# jayant-2301201124

./: README.md
Document-Similarity-Checker/document-similarity-finder/: Document_Similarity_Checker_Report.docx  README.md  pyproject.toml
Document-Similarity-Checker/document-similarity-finder/data/raw/: documents.csv
Document-Similarity-Checker/document-similarity-finder/notebooks/: exploration.ipynb
Document-Similarity-Checker/document-similarity-finder/src/: main.py  preprocessing.py  similarity.py  visualization.py
Document-Similarity-Checker/document-similarity-finder/tests/: test_similarity.py
Twitter-Sentiment-Analysis/: Comment-Sentiment.csv  README.md  Twitter_Sentiment_Analysis_Report.docx  main.py  model_enhanced.joblib
